--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hyper = { version = "1.0.0-rc.3", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+pretty_env_logger = "0.4"
+http-body-util = "0.1.0-rc.2"
+bytes = "1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+url = "2.2"
+http = "0.2"
+futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
+assert-json-diff = "2.0.2"
